# osss-ucx

./: .codacy.yaml  .gitignore  AUTHORS  COPYRIGHT  ChangeLog  LICENSE  Makefile.am  README  README.md  autogen.sh  configure  configure.ac
doc/: README  README.md  build.txt  building.md  building.txt  debugging.txt  emulation.md  emulation.txt  launch.txt  logging.md  logging.txt  prrte.md  prrte.txt  running.md  running.txt  (+1 more)
include/: Makefile.am  null-shmemx.fh  null-shmemx.h.in  pshmem.fh.in  pshmem.h  pshmem.h.in  pshmemx.fh  pshmemx.fh.in  pshmemx.h  pshmemx.h.in  shmem.fh  shmem.fh.in  shmem.h  shmem.h.in  shmem_api.h.in  shmem_defines.fh.in  shmem_defines.h.in  shmem_depr.h.in  shmemx.fh  shmemx.fh.in  shmemx.h  shmemx.h.in
include/mpp/: shmem.fh  shmem.h  shmemx.fh  shmemx.h
include/shmem/: api.h  api.h.in  cache.h  defs.fh.in  defs.h  defs.h.in  defs_subst.h.in  depr.h  depr.h.in  generics.h  teams.h
man/man1/: Makefile.am  osh_info.1.in  osh_intro.1.in  oshcc.1.in  oshcxx.1.in  oshfort.1.in  oshrun.1.in
src/: Makefile.am  accessible.c  alltoall.c  asr.c  asr.h  atomics.c  barrier.c  broadcast.c  cache.c  collect.c  contexts.c  dlmalloc.c  dlmalloc.h  fcollect.c  fence.c  fencequiet.c  fortran-common.h  fortran-mem.c  fortran.c  get-nbi.c  get-strided.c  get.c  globalexit.c  heapx.c  heapx.h  info.c  info.h  init.c  lock.c  logger.c  logger.h  malloc.c  malloc.h  memalloc.c  memalloc.h  module.h  nosh_info.c  osh_info.c  pe-query.c  pe.c  (+64 more)
src/allocator/: dlmalloc.c  dlmalloc.h  internal-malloc.c  memalloc.c  memalloc.h  memcheck.h  xmemalloc.c  xmemalloc.h
src/api/: Makefile.am  accessible.c  contexts.c  fence.c  globalexit.c  info.c  info.h  init.c  lock.c  module.h  profiling.c  progress.h  ptr.c  put_signal.c  putget.c  putget_complex.h  quiet.c  ranks.c  shmalloc.c  teams.c  test.c  testall.c  testall_vector.c  testany.c  testany_vector.c  testsome.c  testsome_vector.c  tl_query.c  version.c  waitall.c  waitall_vector.c  waitany.c  waitany_vector.c  waitsome.c  waitsome_vector.c  waituntil.c
src/api/allocator/: internal-malloc.h  memalloc.c  memalloc.h  xmemalloc.c  xmemalloc.h
src/api/atomics/: Makefile.am  add.c  and.c  atomics-nb.c  atomics.c  cswap-nbi.c  cswap.c  fetch-add-nbi.c  fetch-add.c  fetch-and-nbi.c  fetch-and.c  fetch-inc-nbi.c  fetch-inc.c  fetch-nbi.c  fetch-or-nbi.c  fetch-or.c  fetch-xor-nbi.c  fetch-xor.c  fetch.c  inc.c  or.c  set.c  swap-nbi.c  swap.c  xor.c
src/api/collectives/: README.md  defaults.h  reductions.h  shcoll-shim.c  table.c
src/api/deprecated/: atomics.c  cache.c  init.c  ranks.c  shmalloc.c  waituntil.c
src/api/extensions/: fence.c  interop.c  quiet.c  shmalloc.c  wtime.c
src/api/osh_info/: Makefile.am
src/atomics/: Makefile.am  add.c  and.c  common.h  fetch-add-nbi.c  fetch-add.c  fetch-and-nbi.c  fetch-and.c  fetch-nbi.c  fetch-or-nbi.c  fetch-or.c  fetch-xor-nbi.c  fetch-xor.c  inc.c  set.c  swap-nbi.c  swap.c
src/collectives/: README  README.md  collectives.h  defaults.h  reductions.h  shcoll-shim.c  shcoll-shim.h  table.c  table.h  test.c
src/collectives.save/: alltoall.c  barrier.c
src/collectives/shcoll/: .gitignore
src/collectives/shcoll/src/: Makefile.am  alltoall.c  alltoalls.c  barrier.c  collect.c  fcollect.c  reduction.c
src/collectives/shcoll/src/shcoll/: alltoalls.h  broadcast.h  common.h  compat.h
src/collectives/shcoll/src/util/: bithacks.c  broadcast-size.c  rotate.h  scan.c  scan.h  trees.h
src/collectives/shcoll/tests/util/: run.h
src/comms/: comms.h
src/deprecated/: atomics.c  cache.c  fortran.c  init.c  ranks.c  shmalloc.c  waituntil.c
src/extensions/: interop.c  putget_signal.c  shmalloc.c  testall.c  testany.c  testsome.c  waitall.c  waitany.c  waitsome.c  wtime.c
src/fortran/: fortran-cache.c  fortran-common.h  fortran-mem.c  fortran.c  fortranx.c
src/mpp/: shmem.h  shmemx.h
src/osh_info/: Makefile.am  osh_info.c
src/ptmalloc/: ptmalloc.c
src/shcoll/: Makefile.am
src/shcoll/src/: Makefile.am  alltoalls.c  barrier.c  broadcast.c  reduction.c  shcoll.h
src/shcoll/src/shcoll/: alltoall.h  barrier.h  collect.h  fcollect.h  reduction.h
src/shcoll/src/util/: bithacks.h  broadcast-size.c  broadcast-size.h  rotate.c  trees.c
src/shcoll/tests/util/: debug.h  util.h
src/shmemc/: Makefile.am  README  barrier.c  barrier.h  boolean.h  broadcast.c  collalgo.c  collalgo.h  collect.c  comms.c  comms.h  contexts.c  dlmalloc.h  dlmalloc.make  dummy.c  env.c  fcollect.c  get.c  getenv.c  globalexit.c  globalexit.h  heaps.c  heaps.h  heapsize.h.in  heapx.c  heapx.h  init.c  lock.c  locks.c  logger.c  mcs-lock.c  memalloc.c  memfence.h  module.h  nodename.c  nodename.h  osh-bot.common  osh_bot.common  osh_common.in  oshcc.in  (+46 more)
src/shmemc/collectives/: shcoll-shim.h
src/shmemc/gasnet/: Makefile.am  bail.c  bail.h  comms.c  gasnet-common.h  get-strided.c  get.c  gvhack.c  locality.c  locality.h  lock.c  oshcc.tmpl.in  oshcxx.tmpl.in  oshfort.tmpl.in  oshrun.tmpl.in  put-strided.c  put.c  service.c  service.h
src/shmemc/ucx/: Makefile.am  api.h  callbacks.c  callbacks.h  comms.c  comms.c.save  comms.h  contexts.c  emulation.c  eps.c  init.c  memfence.h  module.h  oshcc.tmpl.in  oshcxx.tmpl.in  oshfort.tmpl.in  pe.h  pmi-init.c  pmi1-client.c  pmi1-client.h  pmi1_client.c  pmix-client.c  pmix_client.c  teams.c  test.c  waituntil.c  yielder.h
src/shmemc/unused/: progress.c
src/shmemi/: Makefile.am  accessible.c  heapx.c  heapx.h  init.c  logger.c  logger.h  malloc.c  pe.c  pmi1-client.c  pmi2-client.c  pmi2-client.h  pmix-client.c  ptr.c  shmemi.c  shmemi.h  shmemi_pmi1.c  shmemi_pmix.c  timer.c
src/shmemi/dlmalloc/: Makefile.am
src/shmemi/shmemc/: Makefile.am  shmemc.h
src/shmemt/: Makefile.am  module.h  shmem_mutex.c  shmem_mutex.h  threading.c
src/shmemu/: Makefile.am  asr.c  carp.c  collalgo.c  deprecate.c  fatal.c  hostname.c  init.c  init.h  logger.c  memcheck.c  miscops.c  module.h  parse_csv.c  plural.c  progress.c  round.c  shmemu-init.c  shmemu.c  shmemu.h  shmemu_init.c  threadlevels.c  timer.c  unitparse.c
src/shmemu/uthash/: LICENSE
(+33 files in other folders)
